--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>CatPhotoApp</title>
+  
   </head>
   <body>
     <main>
@@ -67,7 +68,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe Menu</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="/styles.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="menu">
